apps/haenu/twitchzzk-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitchzzk-api
  namespace: haenu
  labels:
    app: twitchzzk-api
spec:
  selector:
    matchLabels:
      app: twitchzzk-api
  template:
    metadata:
      labels:
        app: twitchzzk-api
    spec:
      containers:
      - name: twitchzzk-api
        image: hyeonwoo5342/twitchzzk-api:7
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: '200Mi'
            cpu: '250m'
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 35
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 25
          periodSeconds: 10
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "15"]
      imagePullSecrets:
      - name: dockerhub-secret
