apps/haenu/twitchzzk-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitchzzk-api-ingress
  namespace: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.twitchzzk.tv
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: twitchzzk-api
            port:
              number: 3000
